# x/asset/internal/types/events.go
@@ -2,8 +2,9 @@ package types
 
 // Asset module event types
 var (
-	EventTypeIssueToken = "issue_token"
-	EventTypeMintToken  = "mint_token"
+	EventTypeIssueToken      = "issue_token"
+	EventTypeMintToken       = "mint_token"
+	EventTypeDelayedTransfer = "delayed_transfer"
 
 	AttributeValueCategory = ModuleName
 )
