# x/asset/internal/types/msgs.go
@@ -2,15 +2,15 @@ package types
 
 import (
 	"fmt"
-	sdk "github.com/barkisnet/barkis/types"
 	"strings"
+
+	sdk "github.com/barkisnet/barkis/types"
 )
 
 const (
-	//todo refactor name
-	IssueMsgType = "issueMsg"
-	MintMsgType  = "mintMsg"
-	DelayMsgType = "delayMsgType"
+	IssueMsgType           = "issueMsg"
+	MintMsgType            = "mintMsg"
+	DelayedTransferMsgType = "delayedTransferMsg"
 
 	MaxTokenNameLength         = 32
 	MaxTokenSymbolLength       = 12
@@ -115,30 +115,30 @@ func (msg MintMsg) ValidateBasic() sdk.Error {
 	return nil
 }
 
-type DelayTransferMsg struct {
-	From        sdk.AccAddress `json:"from" yaml:"from"`
-	To          sdk.AccAddress `json:"to" yaml:"to"`
-	Amount      sdk.Coins      `json:"amount" yaml:"amount"`
-	DelayPeriod int64          `json:"delay_period" yaml:"delay_period"`
+type DelayedTransferMsg struct {
+	From          sdk.AccAddress `json:"from" yaml:"from"`
+	To            sdk.AccAddress `json:"to" yaml:"to"`
+	Amount        sdk.Coins      `json:"amount" yaml:"amount"`
+	DelayedPeriod int64          `json:"delayed_period" yaml:"delayed_period"`
 }
 
-func NewDelayTransferMsg(from, to sdk.AccAddress, amount sdk.Coins, delayPeriod int64) DelayTransferMsg {
-	return DelayTransferMsg{
-		From:        from,
-		To:          to,
-		Amount:      amount,
-		DelayPeriod: delayPeriod,
+func NewDelayedTransferMsg(from, to sdk.AccAddress, amount sdk.Coins, delayedPeriod int64) DelayedTransferMsg {
+	return DelayedTransferMsg{
+		From:          from,
+		To:            to,
+		Amount:        amount,
+		DelayedPeriod: delayedPeriod,
 	}
 }
 
-func (msg DelayTransferMsg) Route() string                { return RouterKey }
-func (msg DelayTransferMsg) Type() string                 { return DelayMsgType }
-func (msg DelayTransferMsg) GetSigners() []sdk.AccAddress { return []sdk.AccAddress{msg.From} }
-func (msg DelayTransferMsg) GetSignBytes() []byte {
+func (msg DelayedTransferMsg) Route() string                { return RouterKey }
+func (msg DelayedTransferMsg) Type() string                 { return DelayedTransferMsgType }
+func (msg DelayedTransferMsg) GetSigners() []sdk.AccAddress { return []sdk.AccAddress{msg.From} }
+func (msg DelayedTransferMsg) GetSignBytes() []byte {
 	bz := ModuleCdc.MustMarshalJSON(msg)
 	return sdk.MustSortJSON(bz)
 }
-func (msg DelayTransferMsg) ValidateBasic() sdk.Error {
+func (msg DelayedTransferMsg) ValidateBasic() sdk.Error {
 	if len(msg.From) != sdk.AddrLen {
 		return sdk.ErrInvalidAddress(fmt.Sprintf("sender address length should be %d", sdk.AddrLen))
 	}
@@ -146,13 +146,13 @@ func (msg DelayTransferMsg) ValidateBasic() sdk.Error {
 		return sdk.ErrInvalidAddress(fmt.Sprintf("sender address length should be %d", sdk.AddrLen))
 	}
 	if !msg.Amount.IsValid() {
-		return sdk.ErrInvalidCoins("send amount is invalid: " + msg.Amount.String())
+		return sdk.ErrInvalidCoins("transfer amount is invalid: " + msg.Amount.String())
 	}
 	if !msg.Amount.IsAllPositive() {
-		return sdk.ErrInsufficientCoins("send amount must be positive")
+		return sdk.ErrInsufficientCoins("transfer amount must be positive")
 	}
-	if msg.DelayPeriod < 0 {
-		return ErrInvalidDelayPeriod(DefaultCodespace, "negative delay period")
+	if msg.DelayedPeriod <= 0 {
+		return ErrInvalidDelayPeriod(DefaultCodespace, "delayed period must be positive")
 	}
 	return nil
 }
